lcb: Define register defs in PseudoExpansion